# dx-toolkit

./: .arcconfig  .arclint  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  COPYING  Dockerfile  ERRORS.txt  Makefile  Readme-developer.md  Readme-osx-10.9.md  Readme-osx.md  Readme.md  X  build_ua.sh  environment  environment.bat  environment.csh  environment.fish  run_tests.sh
doc/example-templates/cpp/parallelized/src/: CMakeLists.txt  Makefile  code.cpp  code.sh  run.sh
doc/example-templates/cpp/scatter-process-gather/src/: CMakeLists.txt  code.cpp  run.sh
doc/examples/dx-cpp-apps/random_gtable_app/src/: CMakeLists.txt  Makefile  rand_gtable.cpp
lib/cpp/SimpleHttpLib/: CMakeLists.txt  Makefile  SimpleHttp.cpp  SimpleHttp.h  SimpleHttpHeaders.cpp  SimpleHttpHeaders.h  Utility.cpp  Utility.h  gtest_http.cpp
lib/cpp/dxcpp/: CMakeLists.txt  Doxyfile  api.cc  api.h  bindings.cc  bindings.h  dxcpp.cc  dxcpp.h  exceptions.h  json.h  test_dxcpp.cc
lib/cpp/dxcpp/bindings/: dxapp.cc  dxapp.h  dxcollection.cc  dxcollection.h  dxfile.cc  dxfile.h  dxgroup.cc  dxgroup.h  dxgtable.cc  dxgtable.h  dxjob.cc  dxjob.h  dxjson.cc  dxjson.h  dxprogram.cc  dxprogram.h  dxproject.cc  dxproject.h  dxrecord.cc  dxrecord.h  dxtable.cc  dxtable.h  dxuser.cc  dxuser.h
lib/cpp/dxjson/: CMakeLists.txt  Doxyfile  README  doxygen.config  dxjson.cpp  dxjson.h  dxjson_example.cpp  example_usage.cpp  gtest_json.cpp  make_standard_lib.sh  trial.cpp
lib/cpp/dxlog/: CMakeLists.txt  appLogHandler.cc  appLogHandler.h  dxDbLog.cc  dxLog.cc  dxLog.h  dxLog_helper.cc  dxLog_helper.h  mongoLog.cc  mongoLog.h  scheme.js  test.cc  test_appLog_conf.js  test_dbLog_conf.js  test_log.cc  unixDGRAM.cc  unixDGRAM.h  verify_logschema.cc
lib/cpp/dxlog/test/: invalid_logfacility.js  invalid_maxMsgSize.js  invalid_maxMsgSize2.js  invalid_mongodb_columns.js  invalid_mongodb_indexes4.js  invalid_required.js  invalid_schema.js  invalid_text.js  invalid_text_format.js  invalid_text_tag.js  missing_mongodb.js  mongodb_missing_columns.js  start_joblog.js  stop_joblog.js
lib/cpp/dxlog/test/appLog/: empty_socketPath.js  invalid_logschema.js  invalid_socket.js  invalid_socket2.js  no_jobId.js  no_logschema.js  no_logschema_file.js  no_programId.js  no_projectId.js  no_socketPath.js  no_userId.js
lib/cpp/dxlog/test/dBLog/: invalid_schema.js  invalid_socketPath.js  missing_schema.js  missing_socketPath.js
lib/cpp/dxlog/test/logschema/: invalid_logfacility2.js  invalid_mongodb.js  invalid_mongodb_column_type.js  invalid_mongodb_column_type2.js  invalid_mongodb_indexes.js  invalid_mongodb_indexes2.js  invalid_mongodb_indexes3.js  invalid_mongodb_indexes5.js  invalid_required2.js  invalid_schema.js  missing_text.js  text_missing_format.js  text_missing_tag.js
lib/cpp/dxlog/test/messages/: api.js  app.js  audit.js  cloudmanager.js  jobserver.js  (+2 more)
lib/cpp/resolver/: CMakeLists.txt  Resolver.cpp  Resolver.h  Thread.cpp  Thread.h
src/contigset2fasta/: CMakeLists.txt  Makefile  contigset2fasta.cpp
src/cpp/SimpleHttpLib/: CMakeLists.txt  SSLThreads.cpp  SSLThreads.h  SimpleHttp.cpp  SimpleHttp.h  SimpleHttpHeaders.cpp  SimpleHttpHeaders.h  Utility.cpp  Utility.h  ignore_sigpipe.h
src/cpp/dxcpp/: CMakeLists.txt  Doxyfile  SSLThreads.cpp  api.cc  api.h  bindings.cc  bindings.h  bqueue.h  dxcpp.cc  dxcpp.h  dxlog.cc  dxlog.h  exceptions.h  exec_utils.cc  exec_utils.h  mainpage.dox  utils.cc  utils.h
src/cpp/dxcpp/bindings/: dxapp.cc  dxapp.h  dxapplet.cc  dxapplet.h  dxfile.cc  dxfile.h  dxgtable.cc  dxgtable.h  dxjob.cc  dxjob.h  dxprogram.h  dxproject.cc  dxproject.h  dxrecord.cc  dxrecord.h  dxtable.cc  dxtable.h  execution_common_helper.cc  execution_common_helper.h  search.cc  search.h
src/cpp/dxjson/: CMakeLists.txt  Doxyfile  README  dxjson.cpp  dxjson.h  dxjson_example.cpp  mainpage.dox  make_standard_lib.sh  trial.cpp
src/cpp/dxlog/: CMakeLists.txt  dxLog.cc  dxLog.h  dxLog_helper.cc  dxLog_helper.h  unixDGRAM.cc  unixDGRAM.h
src/cpp/dxvalidator/: CMakeLists.txt  dxvalidate_contigset.cc  dxvalidate_contigset.h  dxvalidate_gri.cc  dxvalidate_gri.h  dxvalidate_gtable.cc  dxvalidate_gtable.h  dxvalidate_tools.cc  dxvalidate_tools.h
src/cpp/resolver/: CMakeLists.txt  Resolver.cpp  Resolver.h
src/cpp/test/: CMakeLists.txt  Makefile  gtest_http.cpp  gtest_json.cpp  test_dxcpp.cc  test_dxjson.cpp  test_dxlog.cc  test_simplehttp.cpp
src/cpp/test/gtest/: CMakeLists.txt
src/dx-contigset-to-fasta/: CMakeLists.txt  Makefile  dx_contigset_to_fasta.cpp
src/dx-verify-file/: .gitignore  CMakeLists.txt  File.cpp  File.h  Makefile  Makefile.mw  Makefile.static  api_helper.cpp  api_helper.h  ca-certificates.crt  chunk.cpp  chunk.h  log.cpp  log.h  main.cpp  options.cpp  options.h
src/dx-verify-file/windows_build/: collect_dx-verify-file_dlls.sh
src/dx-wig-to-wiggle/: CMakeLists.txt  Common.h  Compress.cpp  Compress.h  ContigSet.h  Exceptions.h  Makefile  WigFile.cpp  WigFile.h  wig_importer.cpp
src/pairedreads_ins_est/: CMakeLists.txt  Makefile  lastz.makefile  pairedreads_ins_est.cpp
src/reads_validator/: .gitignore  CMakeLists.txt  Makefile  reads_validate_helper.h  reads_validator.cpp  test_reads_validator.cpp
src/reads_validator/tests/: colorReads.paired.valid.js  colorReads.unpaired.valid.js  flowReads.paired.oneseq.valid.js  flowReads.paired.valid.js  flowReads.unpaired.valid.js  letterReads.paired.valid.js  letterReads.unpaired.valid.js
src/ua/: CHANGELOG  CMakeLists.txt  File.cpp  File.h  Makefile  Makefile.mw  Makefile.static  Readme.md  api_helper.cpp  api_helper.h  bqueue.cpp  bqueue.h  build_curl.sh  chunk.cpp  chunk.h  common_utils.cpp  common_utils.h  compress.c  compress.h  file.cpp  file.h  import_apps.cpp  import_apps.h  log.cpp  log.h  main.cpp  mime.cpp  mime.h  options.cpp  options.h  round_robin_dns.cpp  round_robin_dns.h  ua_test.cpp  ua_test.h
src/ua/centos_build/: compile_ua_on_centos54.sh
src/ua/installers/NSIS/: ua.nsi
src/ua/windows_build/: README.md  build_boost.sh  build_curl_windows.sh  collect_ua_dlls.sh  install_all_deps.sh  install_file_zlib.sh  install_other_deps.sh
(+1237 files in other folders)
